--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ appdirs==1.4.3
 Babel==2.4.0
 blinker==1.4
 click==6.7
+configparser==3.5.0
 coverage==4.4.1
 decorator==4.0.11
+enum34==1.1.6
+flake8==3.3.0
 Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Login==0.4.0
@@ -17,8 +20,11 @@ guess-language==0.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+mccabe==0.6.1
 packaging==16.8
 pbr==3.0.1
+pycodestyle==2.3.1
+pyflakes==1.5.0
 pyparsing==2.2.0
 python-openid==2.2.5
 pytz==2017.2
